--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -3,6 +3,8 @@
 <html>
 <head>
 	<title>The Pintxopo</title>
+		<meta charset="utf-8"/>
+
 		<link rel="stylesheet" type="text/css" href="css/profile.css" ><!--Estilos principales-->
 		<link href='https://fonts.googleapis.com/css?family=Lora|PT+Sans+Narrow|Old+Standard+TT:400italic,400|Tangerine|Open+Sans+Condensed:300|Courgette' rel='stylesheet' type='text/css'>
 	<style>
@@ -16,7 +18,7 @@
 		<h1><span class="nom-perfil"></span> Perfil</h1>
 		<a href="/logout" class="btn-desconectar">Desconectar</a>
 	</div>
-
+	<hr/>
 	<div class="info">
 
 		<!-- LOCAL INFORMATION -->
