--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,111 +11,15 @@
 		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css"> <!-- load bootstrap css -->
 		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css"> <!-- load fontawesome -->
 
-		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
-		<script type="text/javascript" src="js/pintxos.js"></script>
-		
-		
-		
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" type="text/javascript"></script>
 		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBTcGmuWEwzwZXpcYRMguIQoWAc7yrw6Kc&sensor=false"></script>
 		
-		<script>
-		
-			function initialize() {
-				
-				var mapProp = {
-					center:new google.maps.LatLng(43.3133505, -1.9782344),
-					zoom:14,
-					mapTypeControl: false,
-					scrollwheel: false,
-					mapTypeId:google.maps.MapTypeId.ROADMAP
-				};
-				
-				var map=new google.maps.Map(document.getElementById("googleMap"), mapProp);
-			
-			}
-			
-			google.maps.event.addDomListener(window, 'load', initialize);
-			
-		</script>
-		
-		
-		
-		<script type="text/javascript">
-		
-			$(function() {
-			
-				$('.ancla').click(function() {
-				
-					if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'')) {
-						var target = $(this.hash);
-						target = target.length ? target : $('[name=' + this.hash.slice(1) +']');
-						if (target.length) {
-							$('html,body').animate({
-							
-								scrollTop: target.offset().top - 100
-							
-							}, 500);
-							return false;
-						}
-						
-					}
-						
-				});
-			
-			});
-
-		</script>
-		
-		<script type="text/javascript">
-			
-			$(document).ready(function () {
-			    $('.navegador a').click(function(e) {
-			
-			        $('.active').removeClass('active');
-			
-			        var $parent = $(this).parent();
-			        if (!$parent.hasClass('active')) {
-			            $parent.addClass('active');
-			        }
-			        //e.preventDefault();
-			    });
-			});
-			
-		</script>
-		
-		<script type="text/javascript">
-			
-			$(document).ready(function () {
-			    $('.homeButton').click(function(e) {
-			
-			        window.scrollTo(0, 0);
-			        
-			    });
-			});
-			
-		</script>
-		
-		<script type="text/javascript">
-		
-			var startY = 500;
-	
-			$(window).scroll(function(){
-			    checkY();
-			});
-			
-			function checkY(){
-			    if( $(window).scrollTop() > startY ){
-			        $('.navRedesLateral').animate({'opacity':'1'},300);
-			    }
-			    else{
-			        $('.navRedesLateral').animate({'opacity':'0'},300);
-			    }
-			}
-			
-			// Do this on load just in case the user starts half way down the page
-			checkY();
-		
-		</script>
+		<script src="js/gMapScript.js" type="text/javascript"></script>
+		<script src="js/pintxos.js" type="text/javascript"></script>
+		<script src="js/scrollAnimado.js" type="text/javascript"></script>
+		<script src="js/cambioMenu.js" type="text/javascript"></script>
+		<script src="js/homeButtonScroll.js" type="text/javascript"></script>
+		<script src="js/animacionRedes.js" type="text/javascript"></script>
 		
 	</head>
 
@@ -125,7 +29,7 @@
 			
 			<nav class="menu">
 				<ul class="navegador">
-					<li class="active"><a class="homebutton" href="">HOME</a></li>
+					<li class="active"><a class="homeButton" href="">HOME</a></li>
 					<li><a class="ancla" href="#googleMap">RUTAS</a></li>
 					<li><a class="ancla" href="#pintxos">PINTXOS</a></li>
 				</ul>				
@@ -140,7 +44,7 @@
 			</nav>
 
 			<div class="logo">
-				<a href=""><img src="img/logo_trazado_recortado.png" /></a>
+				<a class="homeButton" href=""><img src="img/logo_trazado_recortado.png" /></a>
 			</div>
 
 		</header>
