--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,6 +16,7 @@
 		
 		<script src="js/gMapScript.js" type="text/javascript"></script>
 		<script src="js/pintxos.js" type="text/javascript"></script>
+		<script src="js/bares.js" type="text/javascript"></script>
 		<script src="js/scrollAnimado.js" type="text/javascript"></script>
 		<script src="js/cambioMenu.js" type="text/javascript"></script>
 		<script src="js/homeButtonScroll.js" type="text/javascript"></script>
