ya salen los bares!

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -16,9 +16,8 @@
 
 	<div class="header">
 		<h1><span class="nom-perfil"></span> Perfil</h1>
-		<a href="/logout" class="btn-desconectar">Desconectar</a>
+		<div class="btn-desconectar"><a href="/logout">Desconectar</a></div>
 	</div>
-	<hr/>
 	<div class="info">
 
 		<!-- LOCAL INFORMATION -->
