--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -5,7 +5,6 @@
 body{
     margin: 0 auto;
     width: 70%;
-	background-image: url('/img/profile-back.jpg'); 
 	background-size: 100%;
 	background-repeat: no-repeat;
     background-attachment: fixed;
@@ -19,34 +18,60 @@ body{
 .header{
     text-align: center;
     padding: 2%;
-    background-color:rgba(254,237,196,0.6);
-    border: 1px solid #3D4C3D;
-    border-radius: 5px;
-    margin-bottom: 3%;
+    background-color:#78E6C1;
+    width: 100%;
 }
 
 .header h1 {
 	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-	font-size: 24px;
+	font-size: 30px;
 	font-style: normal;
 	font-variant: normal;
 	font-weight: bold;
+	color: #F5F5F0;
 }
 
-hr {
-    border: 0;
-    height: 1px;
-    background-image: -webkit-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0)); 
-    background-image: -moz-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0)); 
-    background-image: -ms-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0)); 
-    background-image: -o-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0));
-}
 
 .info{
-    border: 1px solid #3D4C3D;
-    border-radius: 5px;
-    margin: 3% 0 5% 0;
     padding: 2%;
-    background: #E0FFE0;
-    width: 40%;
+    background: #F5F5F0;
+    width: 100%;
+    height: 350px;
+}
+
+.info h3{
+    font-size: 50px;
+}
+
+.btn-desconectar{
+    margin-top: 2%;
+}
+
+.btn-desconectar a {
+    width: 10%;
+    -webkit-box-shadow:rgba(0,0,0,0.2) 0 1px 0 0;
+    -moz-box-shadow:rgba(0,0,0,0.2) 0 1px 0 0;
+    box-shadow:rgba(0,0,0,0.2) 0 1px 0 0;
+    color:#253737;
+    background-color:#F5F5F0;
+    border-radius:5px;
+    -moz-border-radius:5px;
+    -webkit-border-radius:5px;
+    border:none;
+    font-size:12px;
+    font-weight:700;
+    padding:4px 16px;
+    text-decoration: none;
+}
+
+.btn-desconectar nav a:link, .btn-desconectar nav a:visited {
+	display: inline-block;
+	color: #303030;
+	padding: 10px 40px;
+	height: 20px;
+}
+
+.btn-desconectar a:hover{
+    background-color:#B5B7B6;
+    color: #F5F5F0;
 }
