--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -18,29 +18,33 @@ body{
 .header{
     text-align: center;
     padding: 2%;
-    background-color:#78E6C1;
+    background-color:#00B88A;
     width: 100%;
 }
 
 .header h1 {
 	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-	font-size: 30px;
+	font-size: 50px;
 	font-style: normal;
 	font-variant: normal;
 	font-weight: bold;
 	color: #F5F5F0;
 }
+.header p{
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font-size: 25px;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: bold;
+	color: #F5F5F0;
 
+}
 
 .info{
     padding: 2%;
     background: #F5F5F0;
     width: 100%;
     height: 350px;
-}
-
-.info h3{
-    font-size: 50px;
 }
 
 .btn-desconectar{
@@ -72,6 +76,35 @@ body{
 }
 
 .btn-desconectar a:hover{
+    background-color:#B5B7B6;
+    color: #F5F5F0;
+}
+
+.btn-editar a {
+    width: 10%;
+    -webkit-box-shadow:rgba(0,0,0,0.2) 0 1px 0 0;
+    -moz-box-shadow:rgba(0,0,0,0.2) 0 1px 0 0;
+    box-shadow:rgba(0,0,0,0.2) 0 1px 0 0;
+    color:#253737;
+    background-color:#F5F5F0;
+    border-radius:5px;
+    -moz-border-radius:5px;
+    -webkit-border-radius:5px;
+    border:none;
+    font-size:20px;
+    font-weight:700;
+    padding:4px 16px;
+    text-decoration: none;
+}
+
+.btn-editar nav a:link, .btn-editar nav a:visited {
+	display: inline-block;
+	color: #303030;
+	padding: 10px 40px;
+	height: 20px;
+}
+
+.btn-editar a:hover{
     background-color:#B5B7B6;
     color: #F5F5F0;
 }
