--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -15,22 +15,21 @@
 <div class="container">
 
 	<div class="header">
-		<h1><span class="nom-perfil"></span> Perfil</h1>
+		<h1><span class="nom-perfil"></span> <%= user.local.nomUsuario%></h1>
+		<p>
+				<strong>email</strong>: <%= user.local.email %><br>
+		</p>
+
 		<div class="btn-desconectar"><a href="/logout">Desconectar</a></div>
 	</div>
-	<div class="info">
+	<div class="contenedor-editar">
+	
+		<div class="btn-editar"><a href="#">Ver Pintxos</a></div>
+		
+		<div class="btn-editar"><a href="#">Ver Bares </a></div>
 
-		<!-- LOCAL INFORMATION -->
-		<div class="col-sm-6">
-			<div class="well">
-				<h3><span class="nom-user"></span> <%= user.local.nomUsuario %></h3>
+		<div class="btn-editar"><a href="#">Ver Usuarios</a></div>
 
-					<p>
-						<strong>email</strong>: <%= user.local.email %><br>
-					</p>
-
-			</div>
-		</div>
 
 	</div>
 
