edita-pintxos.ejs

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -24,7 +24,7 @@
 		
 		<div class="contenedor-editar">
 		
-			<div class="btn-editar"><a href="/lista-pintxo">Ver Pintxos</a></div>
+			<div class="btn-editar"><a href="/edita-pintxos">Ver Pintxos</a></div>
 			
 			<div class="btn-editar"><a href="#">Ver Bares </a></div>
 	
