--- a/views/edita-pintxos.ejs
+++ b/views/edita-pintxos.ejs
@@ -3,16 +3,30 @@
 <html>
 <head>
 	<title>The Pintxopo</title>
-		<meta charset="utf-8"/>
+	<meta charset="utf-8"/>
+	<style>
+	    .escondido{
+	        display:none;
+	    }
+	</style>
+	<script src="js/mostrarForm.js" type="text/javascript"></script>
 </head>
 <body>
 	<div class="container">
-		
+		<a id="mostrarForm" href="#" onclick="mostrarFormulario()">Añadir Pintxo</a>
+		<form action="#">
+		    <label id="hide" class="escondido">Nombre:</label> <input type="text" name="nombre" class="escondido"><br>
+            <label id="hide" class="escondido">Descripción:</label> <input type="text" name="descripcion" class="escondido">
+		</form>
 		
 		<div id="contenido"><!-- Mostrar una lista de pintxos -->
             <ul>
                 <% for(var i = 0; i<pintxos.length; i++){ %>
-                    <li><%= pintxos[i].nombre %></li>
+                    <li>
+                        <%= pintxos[i].nombre %>
+                        <a id="mostrarForm" href="#" onclick="mostrarFormulario()">[Eliminar]</a>
+                    	<a id="mostrarForm" href="#" onclick="mostrarFormulario()">[Editar]</a>
+                    </li>
                 <% } %>
             </ul>
         
