--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css"> <!-- load fontawesome -->
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" type="text/javascript"></script>
-		<!--<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBTcGmuWEwzwZXpcYRMguIQoWAc7yrw6Kc&sensor=false"></script>-->
+		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBTcGmuWEwzwZXpcYRMguIQoWAc7yrw6Kc&sensor=false"></script>
 		
 		<script src="js/pintxos.js" type="text/javascript"></script>
 		<script src="js/scrollAnimado.js" type="text/javascript"></script>
@@ -20,6 +20,7 @@
 		<script src="js/homeButtonScroll.js" type="text/javascript"></script>
 		<script src="js/animacionRedes.js" type="text/javascript"></script>
 		<script src="js/googleMap.js" type="text/javascript"></script>
+		<script src="js/cargarMarkers.js" type="text/javascript"></script>
 		
 	</head>
 
