--- a/views/index.ejs
+++ b/views/index.ejs
@@ -75,8 +75,20 @@
 				</nav>
 			</div>
 			
-			<div id="googleMap">
-					
+			<div id="rutas">
+			
+				<div id="googleMap">
+						
+				</div>
+				
+				<nav class="navRutas">
+					<ul>						
+						<li><a href="#googleMap" class="ancla" id="btn1">RUTA 1</a></li>
+						<li><a href="#googleMap" class="ancla" id="btn2">RUTA 2</a></li>
+						<li><a href="#googleMap" class="ancla" id="btn3">RUTA 3</a></li>
+					</ul>				
+				</nav>
+			
 			</div>
 			
 			<div class="secciones">
@@ -103,6 +115,7 @@
 		</div>
 		
 		<div>
+				
 			<nav class="navRedesLateral">
 				<ul>				
 					<li><a href="#"><img src="img/facebook.png" ></a></li>
@@ -111,6 +124,7 @@
 					<li><a href="#"><img src="img/pinterest.png" ></a></li>
 				</ul>				
 			</nav>
+			
 		</div>
 		
 		
