--- a/views/edita-pintxos.ejs
+++ b/views/edita-pintxos.ejs
@@ -12,7 +12,10 @@
 	        text-decoration: none;
 	    }
 	</style>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" type="text/javascript"></script>
 	<script src="js/mostrarForm.js" type="text/javascript"></script>
+	<script src="js/borrarPintxo.js" type="text/javascript"></script>
+
 </head>
 <body>
 	<div class="container">
@@ -28,8 +31,8 @@
                 <% for(var i = 0; i<pintxos.length; i++){ %>
                     <li>
                         <%= pintxos[i].nombre %>
-                        <a id="mostrarForm" href="#" onclick="">[Eliminar]</a>
-                    	<a id="mostrarForm" href="#" onclick="">[Editar]</a>
+                        <a class="btnBorrar" id = <%= pintxos[i].id %> href="#">[Eliminar]</a>
+                    	<a id = <%= pintxos[i].id %> href="#">[Editar]</a>
                     </li>
                 <% } %>
             </ul>
