--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,8 @@
 
 		<meta charset="utf-8"/>
 
-		<link rel="stylesheet" type="text/css" href="css/main.css" ><!--Estilos principales-->	
+		<!--Estilos principales-->
+		<link rel="stylesheet" type="text/css" href="css/main.css" >	
 		<link href='https://fonts.googleapis.com/css?family=Lora|PT+Sans+Narrow|Old+Standard+TT:400italic,400|Tangerine|Open+Sans+Condensed:300|Courgette' rel='stylesheet' type='text/css'>
 
 		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css"> <!-- load bootstrap css -->
@@ -20,7 +21,7 @@
 		<script src="js/homeButtonScroll.js" type="text/javascript"></script>
 		<script src="js/animacionRedes.js" type="text/javascript"></script>
 		<script src="js/googleMap.js" type="text/javascript"></script>
-		<script src="js/cargarMarkers.js" type="text/javascript"></script>
+		<script src="js/calcRutas.js" type="text/javascript"></script>
 
 	</head>
 
