elimina pintxos sin recargar

--- a/views/edita-pintxos.ejs
+++ b/views/edita-pintxos.ejs
@@ -32,7 +32,7 @@
                 <% for(var i = 0; i<pintxos.length; i++){ %>
                     <li>
                         <%= pintxos[i].nombre %>
-                        <a class="btnBorrar" id = <%= pintxos[i].id %> href="#">[Eliminar]</a>
+                        <a class="btnBorrar" id = <%= pintxos[i].id %> href="">[Eliminar]</a>
                     	<a class="btnEditar" id = <%= pintxos[i].id %> href="#">[Editar]</a>
                     </li>
                 <% } %>
