--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,7 +32,7 @@
 			<nav class="menu">
 				<ul class="navegador">
 					<li class="active"><a class="homeButton" href="">HOME</a></li>
-					<li><a class="ancla" href="#googleMap">RUTAS</a></li>
+					<li><a class="ancla" href="#ruta">RUTAS</a></li>
 					<li><a class="ancla" href="#pintxos">PINTXOS</a></li>
 				</ul>				
 			</nav>
@@ -78,15 +78,20 @@
 			
 			<div id="rutas">
 			
-				<div id="googleMap">
-						
+				<div id="ruta">
+					<div>
+						<h1>Rutas</h1>
+						<h2>Ofrecemos las mejores rutas por cada barrio</h2>
+						<div id="googleMap">
+						</div>
+					</div>
 				</div>
 				
 				<nav class="navRutas">
 					<ul>						
-						<li><a href="#googleMap" class="ancla" id="btn1">RUTA 1</a></li>
-						<li><a href="#googleMap" class="ancla" id="btn2">RUTA 2</a></li>
-						<li><a href="#googleMap" class="ancla" id="btn3">RUTA 3</a></li>
+						<li><a href="#ruta" class="ancla" id="btn1">RUTA 1</a></li>
+						<li><a href="#ruta" class="ancla" id="btn2">RUTA 2</a></li>
+						<li><a href="#ruta" class="ancla" id="btn3">RUTA 3</a></li>
 					</ul>				
 				</nav>
 			
@@ -97,9 +102,13 @@
 				<div id="pintxos">
 					
 				</div>
-
+				
 				<div id="bares">
-					
+					<div>
+						<h1>Bares... ¡Qué lugares!</h1>
+						<h2>Encuentra los mejores sitios</h2>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+					</div>
 				</div>
 				
 				<div id="calendario">
