--- a/public/css/main.css
+++ b/public/css/main.css
@@ -167,10 +167,27 @@ header {
 	display: inline;
 	margin-right: 20px;
 }
+#rutas h1{
+	padding: 1% 0 0 0;
+	font-family: 'Old Standard TT', serif;
+	color: #303030;
+	text-align: center;
+	font-size: 250%;
+	font-weight: 400;
+}
+
+#rutas h2{
+	font-family: 'Tangerine', cursive;
+	color: #303030;
+	text-align: center;
+	font-size: 200%;
+	font-weight: 400;
+}
 
 #googleMap {
-	width: 100%;
-	height: 500px;
+	width: 96%;
+	margin-left: 2%;
+	height: 410px;
 }
 
 .secciones {	
