ultimos retoques y comentarios finales

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -38,8 +38,8 @@
 
 	<hr>
 
-	<p>Need an account? <a href="/signup">Signup</a></p>
-	<p>Or go <a href="/">home</a>.</p>
+	<p>¿Aún no tienes una cuenta? <a href="/signup">Signup</a></p>
+	<p>O vete a <a href="/">inicio</a>.</p>
 
 </div>
 
