--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,6 +22,8 @@
 		<script src="js/animacionRedes.js" type="text/javascript"></script>
 		<script src="js/googleMap.js" type="text/javascript"></script>
 		<script src="js/calcRutas.js" type="text/javascript"></script>
+		<script src="js/validarFormulario.js" type="text/javascript"></script>
+		<script src="js/cargarLogin.js" type="text/javascript"></script>
 
 	</head>
 
@@ -52,6 +54,7 @@
 		</header>
 
 		<div class="mainSection">
+			
 			<div class="bienvenida">
 				<h2>La cultura del ocio gastronómico</h2>
 				<p>El sibaritismo gastronómico, unido a la inteligencia contribuye a hacer a los hombres amables.</p>
@@ -60,7 +63,7 @@
 			<div class="container-login">
 				<div class="content">
 					<p>Inicia sesión o regístrate:</p>
-					<div class="boton-log"><a href="/login" class="boton_form"><span class="fa fa-user"></span>Inicia sesión</a></div>
+					<div class="boton-log"><a href="/login" id="loginBtn" class="boton_form"><span class="fa fa-user"></span>Inicia sesión</a></div>
 					<div class="boton-log"><a href="/signup" class="boton_form"><span class="fa fa-user"></span>Regístrate<a></div>
 				</div>
 			</div>	
@@ -68,10 +71,10 @@
 			<div>
 				<nav class="navRedes">
 					<ul>						
-						<li><a href="#"><img src="img/facebook.png" ></a></li>
-						<li><a href="#"><img src="img/google_plus.png"></a></li>
-						<li><a href="#"><img src="img/twitter.png" ></a></li>
-						<li><a href="#"><img src="img/pinterest.png" ></a></li>
+						<li><a href="https://www.facebook.com/profile.php?id=100004284648257" target="_blank"><img src="img/facebook.png" ></a></li>
+						<li><a href="https://twitter.com/ThePintxopo" target="_blank"><img src="img/twitter.png" ></a></li>
+						<li><a href="https://plus.google.com/u/0/111903066256897710616/posts" target="_blank"><img src="img/google_plus.png"></a></li>
+						<li><a href="http://www.pinterest.com/pdonostia/" target="_blank"><img src="img/pinterest.png" ></a></li>
 					</ul>				
 				</nav>
 			</div>
@@ -137,7 +140,12 @@
 			
 		</div>
 		
-		
+		<div id="panelLogin">
+
+			
+			
+			
+		</div>
 
 	</body>
 
