--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,7 +33,7 @@
 			
 			<nav class="menu">
 				<ul class="navegador">
-					<li class="active"><a class="homeButton" href="">HOME</a></li>
+					<li id="homeButton" class="active"><a class="homeButton" href="">HOME</a></li>
 					<li><a class="ancla" href="#ruta">RUTAS</a></li>
 					<li><a class="ancla" href="#pintxos">PINTXOS</a></li>
 				</ul>				
@@ -41,9 +41,9 @@
 
 			<nav class="menu2">
 				<ul class="navegador">
-					<li><a class="ancla" href="#bares">BARES</a></li>
-					<li><a class="ancla" href="#calendario">CALENDARIO</a></li>
 					<li><a href="#">ABOUT</a></li>
+					<li><a class="ancla" href="#calendario">CALENDARIO</a></li>
+					<li><a class="ancla" href="#bares">BARES</a></li>
 				</ul>				
 			</nav>
 
@@ -137,13 +137,6 @@
 					<li><a href="#"><img src="img/pinterest.png" ></a></li>
 				</ul>				
 			</nav>
-			
-		</div>
-		
-		<div id="panelLogin">
-
-			
-			
 			
 		</div>
 
