--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -5,6 +5,7 @@
  */
 
 /*! normalize.css v3.0.2 | MIT License | git.io/normalize */
+@import url("//netdna.bootstrapcdn.com/bootstrap/3.0.0-rc2/css/bootstrap-glyphicons.css");
 html {
   font-family: sans-serif;
   -webkit-text-size-adjust: 100%;
