--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,13 +8,16 @@
 		<!--Estilos principales-->
 		<link rel="stylesheet" type="text/css" href="css/main.css" >	
 		<link href='https://fonts.googleapis.com/css?family=Lora|PT+Sans+Narrow|Old+Standard+TT:400italic,400|Tangerine|Open+Sans+Condensed:300|Courgette' rel='stylesheet' type='text/css'>
-
+		
+		<!--Estilos bootstrap-->
 		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css"> <!-- load bootstrap css -->
 		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css"> <!-- load fontawesome -->
 
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" type="text/javascript"></script>
+		<!--Enlace de JQuery & JS para la API de Google-->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" type="text/javascript"></script>
 		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBTcGmuWEwzwZXpcYRMguIQoWAc7yrw6Kc&sensor=false"></script>
 		
+		<!--JavaScripts utilizados-->
 		<script src="js/pintxos.js" type="text/javascript"></script>
 		<script src="js/scrollAnimado.js" type="text/javascript"></script>
 		<script src="js/cambioMenu.js" type="text/javascript"></script>
@@ -55,9 +58,13 @@
 
 		<div class="mainSection">
 			
+			<img class="imgNegro" src="img/negro.png"></img>
+			
 			<div class="bienvenida">
 				<h2>La cultura del ocio gastronómico</h2>
-				<p>El sibaritismo gastronómico, unido a la inteligencia contribuye a hacer a los hombres amables.</p>
+				<!--<p>El sibaritismo gastronómico, unido a la inteligencia contribuye a hacer a los hombres amables.</p>-->
+				<p>"El mejor banquete del mundo no merece ser degustado a menos que se tenga alguien para compartirlo."</p>
+				<p id="cita">-Groucho Marx</p>
 			</div>
 			
 			<div class="container-login">
@@ -66,7 +73,11 @@
 					<div class="boton-log"><a href="/login" id="loginBtn" class="boton_form"><span class="fa fa-user"></span>Inicia sesión</a></div>
 					<div class="boton-log"><a href="/signup" class="boton_form"><span class="fa fa-user"></span>Regístrate<a></div>
 				</div>
-			</div>	
+			</div>
+			
+			<div class="btnUnete">
+				<a href="/login"><img class="imgBoton" src="img/btn-unete.png"></img></a> 
+			</div>
 
 			<div>
 				<nav class="navRedes">
@@ -110,7 +121,8 @@
 					<div>
 						<h1>Bares... ¡Qué lugares!</h1>
 						<h2>Encuentra los mejores sitios</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+						</p>
 					</div>
 				</div>
 				
