--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -4,26 +4,104 @@
 <head>
 	<title>The Pintxopo</title>
 	<meta charset="utf-8"/>
-	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css"> <!-- load bootstrap css -->
-	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css"> <!-- load fontawesome -->
+	
+	<!-- Bootstrap CSS -->
+	<link rel="stylesheet" href="css/bootstrap.css"/>
+
+	<!-- BootstrapValidator CSS -->
+	<link rel="stylesheet" href="css/bootstrapValidator.min.css"/>
+
+	
+	<!-- jQuery and Bootstrap JS -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" type="text/javascript"></script>
+	<script type="text/javascript" src="js/bootstrap.min.js"></script>
+	
+	<!-- BootstrapValidator JS -->
+	<script type="text/javascript" src="js/bootstrapValidator.min.js"></script>
+	<script type="text/javascript" src="js/validarRegistroUser.js"></script>
+	
 	<style>
 		body 		{ padding-top:80px; }
 	</style>
 </head>
 <body>
 <div class="container">
+        <div class="row">
+            <div class="col-md-8 col-md-offset-2">
+                <div class="page-header">
+                    <h2>Registro</h2>
+                </div>
 
-<div class="col-sm-6 col-sm-offset-3">
-
-	<h1><span class="fa fa-sign-in"></span> Signup</h1>
+	<!--<h1><span class="fa fa-sign-in"></span> Signup</h1>-->
 
 	<!-- show any messages that come back with authentication -->
 	<% if (message.length > 0) { %>
 		<div class="alert alert-danger"><%= message %></div>
 	<% } %>
 
+                <form id="registrationForm" method="post" class="form-horizontal">
+                    <div class="form-group">
+                        <label class="col-sm-3 control-label">Nombre de usuario</label>
+                        <div class="col-sm-5">
+                            <input type="text" class="form-control" name="username" />
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="col-sm-3 control-label">Email</label>
+                        <div class="col-sm-5">
+                            <input type="text" class="form-control" name="email" />
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="col-sm-3 control-label">Password</label>
+                        <div class="col-sm-5">
+                            <input type="password" class="form-control" name="password" />
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="col-sm-3 control-label">Sexo</label>
+                        <div class="col-sm-5">
+                            <div class="radio">
+                                <label>
+                                    <input type="radio" name="gender" value="hombre" /> Hombre
+                                </label>
+                            </div>
+                            <div class="radio">
+                                <label>
+                                    <input type="radio" name="gender" value="mujer" /> Mujer
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="col-sm-3 control-label">Fecha de nac.</label>
+                        <div class="col-sm-5">
+                            <input type="text" class="form-control" name="birthday" placeholder="YYYY/MM/DD" />
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <div class="col-sm-9 col-sm-offset-3">
+                            <!-- Do NOT use name="submit" or id="submit" for the Submit button -->
+                            <button type="submit" class="btn btn-default">Sign up</button>
+                        </div>
+                    </div>
+                </form>
+                
+			<hr>
+
+			<p>¿Ya estás registrado? <a href="/login">Inicia sesión</a></p>
+			<p>o vete a <a href="/">inicio</a>.</p>
+            </div>
+        </div>
+    </div>
+
 	<!-- LOGIN FORM -->
-	<form action="/signup" method="post">
+	<!--<form action="/signup" method="post">
 		<div class="form-group">
 			<label>Nombre de usuario</label>
 			<input type="text" class="form-control" name="nombre">
@@ -38,12 +116,7 @@
 		</div>
 
 		<button type="submit" class="btn btn-warning btn-lg">Signup</button>
-	</form>
-
-	<hr>
-
-	<p>¿Ya estás registrado? <a href="/login">Inicia sesión</a></p>
-	<p>o vete a <a href="/">inicio</a>.</p>
+	</form>-->
 
 </div>
 
